@@ -2,7 +2,7 @@
 <!--
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright 1997-2009 Sun Microsystems, Inc. All rights reserved.
+    Copyright 1997-2010 Sun Microsystems, Inc. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -188,6 +188,21 @@
 		    <fileSet>
 			<directory>src/main/java</directory>
 			<outputDirectory>demo/logging</outputDirectory>
+		    </fileSet>
+		</fileSets>
+	    </sources>
+	</moduleSet>
+
+	<moduleSet>
+	    <includes>
+		<include>com.sun.mail:outlook</include>
+	    </includes>
+	    <sources>
+		<includeModuleDirectory>false</includeModuleDirectory>
+		<fileSets>
+		    <fileSet>
+			<directory>src/main/java</directory>
+			<outputDirectory>demo/outlook</outputDirectory>
 		    </fileSet>
 		</fileSets>
 	    </sources>
